Commit the changed